--- a/develop/dev11/template/delete_event.html
+++ b/develop/dev11/template/delete_event.html
@@ -11,11 +11,11 @@
 
     <h1>Delete an event</h1>
 
-    <form method ="post" action="/create_event">
+    <form method ="post" action="/delete_event">
       
       <h3>Your name: <input type="text" id="user_name" name="user_name" required></h3>
       <h3>Event: <input type="text" id="event_name" name="event_name" required></h3>
-      <button type="submit">Create event</button>
+      <button type="submit">Delete event</button>
 
     </form>
 
